Add role-based authorization
- Role enum (USER/ADMIN), User.role defaults to USER, register() always assigns USER
- AdminUserSeeder: idempotent startup seeding of one admin (externalized creds)
- AppUserDetailsService now grants ROLE_-prefixed authorities from the user's role
- @EnableMethodSecurity + @PreAuthorize(hasRole('ADMIN')) on updateOrder/deleteOrder
- JsonAccessDeniedHandler: clean 403 JSON, mirroring the existing 401 entry point
Concept: method-level security, AuthenticationException vs AccessDeniedException, pre-invocation authorization checks